# python-starter

./: .gitignore  .gitmodules  README.md  README.md.jinja  TEMPLATE_STATUS.md  TEMPLATE_STATUS.md.jinja  copier.yml  graft.yaml  pyproject.toml  pyproject.toml.jinja
.github/workflows/: lint.yml.jinja  test.yml.jinja
docs/: README.md  README.md.jinja  agents.md  agents.md.jinja  knowledge-base.yaml
docs/architecture/: architecture.md  dependency-injection.md  domain-model.md  functional-services.md  overview.md  testing-strategy.md
docs/copier/: customization-points.md  dependency-pattern.md  template-design.md  variable-mapping.md
docs/decisions/: 001-why-uv.md  002-src-layout.md  003-protocol-di.md  004-functional-services.md  005-context-objects.md  006-typer-cli.md  007-ruff-tooling.md
docs/guides/: adding-features.md  cli-usage.md  development-workflow.md  development.md  getting-started.md  testing-guide.md
docs/reference/: configuration.md  context-objects.md  project-reference.md  project-structure.md  protocols.md  tooling.md
scripts/: setup.sh.jinja  test.sh.jinja
src/{{ package_name }}/: __init__.py.jinja  __main__.py.jinja
src/{{ package_name }}/adapters/: __init__.py.jinja  in_memory_repository.py.jinja  repository.py.jinja
src/{{ package_name }}/cli/: __init__.py.jinja  main.py.jinja
src/{{ package_name }}/cli/commands/: __init__.py.jinja  example.py.jinja
src/{{ package_name }}/domain/: __init__.py.jinja  entities.py.jinja  entity.py.jinja  errors.py.jinja  exceptions.py.jinja  repository.py.jinja  value_objects.py.jinja
src/{{ package_name }}/protocols/: __init__.py.jinja  repository.py.jinja
src/{{ package_name }}/services/: __init__.py.jinja  context.py.jinja  example_service.py.jinja
tests/: conftest.py.jinja
tests/fakes/: __init__.py.jinja  fake_repository.py.jinja
tests/integration/: __init__.py.jinja  test_adapters.py.jinja  test_in_memory_repository.py.jinja
tests/unit/: __init__.py.jinja  test_domain.py.jinja  test_entity.py.jinja  test_example_service.py.jinja  test_services.py.jinja
